add your-students page

--- a/views/page-students.html
+++ b/views/page-students.html
@@ -2,93 +2,105 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Your Students</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../public/css/style.css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="../public/css/page-students.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
         <head>
             <nav>
-
+                <button class="pull-right btn btn-secondary" type="button" name="logout">Logout</button>
             </nav>
         </head>
-        <main>
-            <h1>Your Students</h1>
-            <table>
-                <colgroup span="4"></colgroup>
-                <tr>
-                    <td>
-                        Cordelia Harmon
-                    </td>
-                    <td>
-                        Cambridge University
-                    </td>
-                    <td>
-                        Phase 2
-                    </td>
-                    <td>
-                        Go
-                    </td>
-                </tr>
+        <main class="clearfix">
+            <div class="heading">
+                <h1>Your Students</h1>
+            </div>
+            <div class="table-wrap">
+                <table class="table table-striped">
+                    <colgroup span="4"></colgroup>
+                    <tr class="clickable-row">
+                        <td>
+                            Cordelia Harmon
+                        </td>
+                        <td>
+                            Cambridge University
+                        </td>
+                        <td>
+                            Phase 2
+                        </td>
+                        <td>
+                            <i class="fa fa-angle-right"></i>
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        Lottie Munoz
-                    </td>
-                    <td>
-                        Cambridge University
-                    </td>
-                    <td>
-                        Phase 2
-                    </td>
-                    <td>
-                        Go
-                    </td>
-                </tr>
+                    <tr class="clickable-row">
+                        <td>
+                            Lottie Munoz
+                        </td>
+                        <td>
+                            University of Bristol
+                        </td>
+                        <td>
+                            Phase 2
+                        </td>
+                        <td>
+                            <i class="fa fa-angle-right"></i>
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        Bettie Rodriguez
-                    </td>
-                    <td>
-                        Cambridge University
-                    </td>
-                    <td>
-                        Phase 2
-                    </td>
-                    <td>
-                        Go
-                    </td>
-                </tr>
+                    <tr class="clickable-row">
+                        <td>
+                            Bettie Rodriguez
+                        </td>
+                        <td>
+                            Sussex University
+                        </td>
+                        <td>
+                            Phase 2
+                        </td>
+                        <td>
+                            <i class="fa fa-angle-right"></i>
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        Mittie Barber
-                    </td>
-                    <td>
-                        Cambridge University
-                    </td>
-                    <td>
-                        Phase 2
-                    </td>
-                    <td>
-                        Go
-                    </td>
-                </tr>
+                    <tr class="clickable-row">
+                        <td>
+                            Mittie Barber
+                        </td>
+                        <td>
+                            University of Manchester
+                        </td>
+                        <td>
+                            Phase 2
+                        </td>
+                        <td>
+                            <i class="fa fa-angle-right"></i>
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        Steve Barber
-                    </td>
-                    <td>
-                        Cambridge University
-                    </td>
-                    <td>
-                        Phase 2
-                    </td>
-                    <td>
-                        Go
-                    </td>
-                </tr>
-            </table>
+                    <tr class="clickable-row">
+                        <td>
+                            Steve Barber
+                        </td>
+                        <td>
+                            Cambridge University
+                        </td>
+                        <td>
+                            Phase 2
+                        </td>
+                        <td>
+                            <i class="fa fa-angle-right"></i>
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </main>
+        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     </body>
 </html>
